--- a/src/test/Test.mxml
+++ b/src/test/Test.mxml
@@ -40,6 +40,11 @@
         log("  Unable to buy " + transaction.payment.quantity + " x " + transaction.payment.productIdentifier);
       }
 
+      private function doInit():void {
+        var skus:String = "sku1,sku2,sku3,sku4,sku5";
+        StoreKit.init(skus.split(','));
+      }
+
       private function clrHandler():void {
         var transactions:Array = StoreKit.transactions;
         log("Deleting " + transactions.length + " transactions");
@@ -84,9 +89,11 @@
       </s:layout>
 
       <s:HGroup width="80%" verticalAlign="middle">
-        <s:Button label="init"
-          click="StoreKit.init(products.text.split(','));"/>
-        <s:TextInput id="products" width="100%" text="sku1,sku2,sku3,sku4,sku5"/>
+        <s:Button label="init" click="doInit()"/>
+        <s:Button label="can?" click="canHandler()"/>
+        <s:Button label="txs" click="transactionsHandler()"/>
+        <s:Button label="clr" click="clrHandler()"/>
+        <s:Button label="cls" click="console.text = ''"/>
       </s:HGroup>
 
       <s:HGroup width="80%" verticalAlign="middle">
@@ -95,14 +102,7 @@
         <s:TextInput id="product" width="100%" text="sku1"/>
       </s:HGroup>
 
-      <s:HGroup width="80%">
-        <s:Button label="can?" click="canHandler()"/>
-        <s:Button label="txs" click="transactionsHandler()"/>
-        <s:Button label="clr" click="clrHandler()"/>
-        <s:Button label="cls" click="console.text = ''"/>
-      </s:HGroup>
-
-      <s:TextArea id="console" fontSize="14" height="100%" width="80%"/>
+      <s:TextArea id="console" fontSize="14" height="100%" width="80%" editable="false"/>
 
     </s:Panel>
 
