Add item localization support
StoreKit.products = [ 'sku1': {
  'productIdentifier': 'sku1',
  'localizedTitle': '100 coins',
  'localizedDescription': 'Extra 100 coins',
  'localizedPrice': '£0.99'
}, 'sku2': { ... } ];

--- a/src/test/Test.mxml
+++ b/src/test/Test.mxml
@@ -43,6 +43,7 @@
 
         function onInit(status:Boolean):void {
           log("init(): " + status);
+          log("products: " + JSON.stringify(StoreKit.products, null, 2));
         }
       }
 
